--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ././src/bin/www",
-    "dev": "nodemon ././src/bin/www"
+    "start": "node ./app/src/bin/www",
+    "dev": "nodemon ./app/src/bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
+    "nodemon": "^2.0.15",
+    "prettier": "^2.5.1"
   }
 }
