--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.4.1",
