--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "xmldom": "^0.6.0",
+    "xmlhttprequest": "^1.8.0"
   },
   "devDependencies": {
     "eslint": "^8.4.1",
