--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon ./app/src/bin/www"
   },
   "dependencies": {
+    "aws-sdk": "^2.1045.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^10.0.0",
@@ -17,6 +18,7 @@
     "morgan": "~1.9.1",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
+    "xml-writer": "^1.7.0",
     "xmldom": "^0.6.0",
     "xmlhttprequest": "^1.8.0"
   },
