update error handler

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 PORT=
+NODE_ENV=development
 
 SESSION_SECRET=
 
-BUCKET_XML=
 
+BUCKET=
 AWS_REGION=
 AWS_ACCESS_KEY=
 AWS_SECRET_KEY=
-AWS_CANONICAL_ID=
